@@ -1,6 +1,6 @@
 Package: sp
-Version: 0.9-47
-Date: 2009-11-20
+Version: 0.9-48
+Date: 2009-12-03
 Title: classes and methods for spatial data
 Author: Edzer J. Pebesma <edzer.pebesma@uni-muenster.de>, Roger Bivand <Roger.Bivand@nhh.no> and others
 Maintainer: Edzer J. Pebesma <edzer.pebesma@uni-muenster.de>
